# rendering-learning

./: .gitignore  Cargo.toml  README.md
benches/: ray_tracer.rs
ray-tracer-challenge/: Cargo.toml  README.md
ray-tracer-challenge/benches/: ray_tracer.rs
ray-tracer-challenge/tests/: ray_tracer.rs
ray-tracing-one-weekend/: Cargo.toml  README.md  run.ps1
ray-tracing-one-weekend/examples/: bouncing_spheres.rs  checkered_spheres.rs  cornell_box.rs  cornell_smoke.rs  cow.rs  earth.rs  final_scene.rs  flat_world.rs  perlin_spheres.rs  quads.rs  simple_light.rs  teapot.rs
ray-tracing-one-weekend/examples/common/: mod.rs
ray-tracing-one-weekend/src/: aabb.rs  bvh.rs  bvh_node.rs  camera.rs  color.rs  hittable.rs  interval.rs  lib.rs  main.rs  material.rs  matrix.rs  mesh.rs  output.rs  perlin.rs  ray.rs  sphere.rs  texture.rs  utility.rs  vec3.rs
ray-tracing-one-weekend/src/hittable/: constant_medium.rs  mod.rs  quad.rs  rotate_y.rs  sphere.rs  transform.rs  translate.rs
ray-tracing-one-weekend/src/hittable/flat/: mod.rs  plane.rs  quad.rs  triangle.rs
ray-tracing-one-weekend/src/io/: wavefront_obj.rs
ray-tracing-one-weekend/src/mesh/: mod.rs
ray-tracing-one-weekend/src/mesh/subdivision/: catmull_clark.rs
ray-tracing-one-weekend/tests/: ray_tracing_one_weekend.rs
ray-tracing-one-weekend/tests/expectations/: test.ppm
src/: lib.rs  util.rs
src/draw/: canvas.rs  color.rs  mod.rs
src/geo/: intersect.rs  mod.rs  ray.rs  sphere.rs
src/io/: mod.rs  wavefront_obj.rs
src/math/: matrix.rs  mod.rs  point.rs  transformation.rs  (+3 more)
tests/: ray_tracer.rs
(+52 files in other folders)
