[package]
name = "ray-tracer-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.bench]
debug = true

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
by_address = "1.1.0"
rayon = "1.8"

[[bench]]
name = "ray_tracer"
harness = false
