[package]
name = "ray-tracing-one-weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.9.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
image = "0.25.5"
rayon = "1.10.0"
